removed fixed height on image wrapper, cropped image now displays full

--- a/amani/themes/amani_zen/sass/components/_news-events_page.scss
+++ b/amani/themes/amani_zen/sass/components/_news-events_page.scss
@@ -309,7 +309,7 @@
   .field-name-field-image {
     display: block;
     width: 100%;
-    height: 350px;
+    // height: 350px;
     overflow: hidden;
     padding-top: 10px;
     img {width: 100%;}
